Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm
@@ -1705,6 +1705,11 @@ void WebProcess::initializeAccessibility(Vector<SandboxExtension::Handle>&& hand
 
     [NSApplication _accessibilityInitialize];
 
+    // Now that the accessibility server is registered, send any deferred
+    // remote tokens so the UI process can resolve the remote elements.
+    for (auto& webPage : m_pageMap.values())
+        webPage->sendAccessibilityTokenIfNeeded();
+
     for (auto& extension : extensions)
         extension->revoke();
 }
